# vogro

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  assic.cpp  base.hpp  base_server.hpp  common.hpp  context.hpp  default_error_handler.hpp  get_file_extension_test.cpp  group.hpp  handlers.hpp  http.hpp  http_server.hpp  https.hpp  main.cpp  mime_type.hpp  mine.txt  request.hpp  response.hpp  static_server.hpp  status_code.hpp  utils.hpp  vogro  vogro_logger.hpp  vogro_utils.hpp
certifi/: generate.sh
demo/: CMakeLists.txt  Makefile  main.cpp  vogroServer
demo/handler/: handlers.hpp
demo/middleware/: middleware.hpp
demo/templates/: example.html
demo/test/: test.cpp
doc/: Home.md  How-to-get-query-parameters？.md  how-to-get-url-parameters?.md  how-to-make-a-handlers'-group?.md  how-to-read-and-write-JSON?.md  how-to-register-handlers-?.md  how-to-register-middlewares?.md  (+6 more)
src/: CMakeLists.txt  Makefile  base.hpp  common.hpp  hh.cpp  http.hpp  logger.hpp  logo.hpp  main.cpp  request.hpp  response.hpp  status.hpp  utils.hpp
src/server/: Makefile  base.hpp  context.hpp  default_error_handler.hpp  http.hpp  logger.hpp  logo.hpp  main.cpp  mime.hpp  request.hpp  response.hpp  static.hpp  template_engine.h  template_engine.hpp
src/test-suite/: client.hpp  expect.hpp  request.hpp  request_test.cpp  response.hpp  withx.hpp
src/vogro/server/: base.hpp  common.hpp  context.hpp  group.hpp  http.hpp  https.hpp  logger.hpp  logo.hpp  mime.hpp  request.hpp  static.hpp  status.hpp  template_engine.hpp
src/vogro/test-suite/: client.hpp  request.hpp  response.hpp
(+32 files in other folders)
